--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
-:root {
-    --flowInEffect: ease-in-out;
-    --flowInTime: 0.3s;
-    --morgenBorderColor: rgba(0, 0, 0, 1);
+canvas {
+    display: block;
+    vertical-align: bottom;
 }
+
+#tsparticles {
+    z-index: 1000;
+}
+
 html, body {
     height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
-    background: black url(matterhorn.jpg) center center no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -16,69 +19,55 @@ html, body {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
-    font-family: Arial, Helvetica, sans-serif;
 }
-p {
-    color: white;
-}
-h1 {
-    font-size: 50px;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin: 0px;
-    color: white;
-}
-#controlPanel {
-    position: fixed;
-    bottom: 13px;
-    right: 10px;
-    color: white;
-}
-input {
-    width: 100px;
-    color: white;
-    border-radius: 5px;
-    height: 20px;
-    backdrop-filter: blur(1.5px);
-    background-color: rgba(255, 255, 255, 0.15);
-    border: rgba(255, 255, 255, 0.3) 2px solid;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.3);
-}
+
 .container {
     display: grid;
 }
+
 #fixed_content {
-    grid-template-columns: 30rem 30rem;
+    grid-template-columns: 30% 70%;
     grid-template-rows: 20rem 30rem;
 }
+
 #weather_div {
     grid-area: 2 / 1 / 3 / 1;
 }
+
 #morgen {
     width: auto;
     height: 7rem;
-    border: 3px solid var(--morgenBorderColor);
-    border-radius: 20px;
 }
+
+#mittag {
+    margin-top: 10px;
+    width: auto;
+    height: 7rem;
+}
+
+#abend {
+    margin-top: 10px;
+    width: auto;
+    height: 7rem;
+}
+
 #dynamic_content {
     grid-area: 1 / 2 / 3 / 3;
-    grid-template-columns: 30rem;
+    grid-template-columns: 100%;
     grid-template-rows: 50rem 50rem 50rem;
     float: none;
     overflow-x: scroll;
-    height: 50rem;
+    height: 100%;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
 }
+
 .dynamic_content_child {
     scroll-snap-align: start;
 }
+c
 #calendar {
-    background-color: white;
-    border-radius: 20px;
-    border: 2px rgb(216, 216, 216) solid;
-    border-top: rgb(211, 2, 2) 10px solid;
     position: relative;
     width: 120px;
     height: 200px;
@@ -86,41 +75,30 @@ input {
     bottom: 120px;
     text-align: center;
 }
-.calendar {
-    color: black;
-}
-#calendar_day, #calendar_month, #calendar_year {
-    font-size: 20px;
-}
-#calendar_date {
-    font-size: 60px;
-}
+
 #calendar_year {
     position: absolute;
     bottom: 10px;
     left: 30%;
 }
-#calendar_day, #calendar_month, #calendar_date, #calendar_year, #time_span, #morgen {
-    -webkit-transition: opacity var(--flowInTime) var(--flowInEffect);
-    -moz-transition: opacity var(--flowInTime) var(--flowInEffect);
-    transition: opacity var(--flowInTime) var(--flowInEffect);
-    opacity: 0;
-}
+
 #time_span {
     position: relative;
     top: 4rem;
     font-size: 100px;
     left: 1rem;
 }
+
 #krypto_data {
     margin-top: 20px;
 }
+
 .item_style {
     margin: 10px;
     padding: 10px;
-    backdrop-filter: blur(1.5px);
-    background-color: rgba(255, 255, 255, 0.15);
-    border: rgba(255, 255, 255, 0.3) 2px solid;
-    border-radius: 20px;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.3);
+    border: 1px solid black;
+}
+
+iframe {
+    width: 100%;
 }
