--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ html, body {
 
 #fixed_content {
     grid-template-columns: 30% 70%;
-    grid-template-rows: 20rem 30rem;
+    grid-template-rows: 20rem calc(100% - 20rem);
+    height: 100%;
 }
 
 #weather_div {
@@ -54,7 +55,7 @@ html, body {
 #dynamic_content {
     grid-area: 1 / 2 / 3 / 3;
     grid-template-columns: 100%;
-    grid-template-rows: 50rem 50rem 50rem;
+    grid-template-rows: 100% 100% 100%;
     float: none;
     overflow-x: scroll;
     height: 100%;
@@ -65,8 +66,9 @@ html, body {
 
 .dynamic_content_child {
     scroll-snap-align: start;
+    height: 100%;
 }
-c
+
 #calendar {
     position: relative;
     width: 120px;
@@ -87,6 +89,7 @@ c
     top: 4rem;
     font-size: 100px;
     left: 1rem;
+    opacity: 0;
 }
 
 #krypto_data {
